lego/operator/config/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.bex.co
      secretName: bex-api-tls
  rules:
    - host: api.bex.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api # kustomize rewrites to bex-api (namePrefix)
                port:
                  number: 80
